Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,21 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-21d483bf02d0>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-22-088f9c8b18e6>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-21d483bf02d0>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    buenos_map = folium.Map(la_boca_marker), zoom_start = 12)\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-088f9c8b18e6>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    buenos_map = folium.Map[(la_boca_marker)], zoom_start = 12)\u001b[0m\n\u001b[0m                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "import folium\n",
-    "buenos_map = folium.Map[(la_boca_marker), zoom_start = 12)\n",
+    "buenos_map = folium.Map[(la_boca_marker)], zoom_start = 12)\n",
     "la_boca_marker.add_to(buenos_map)\n",
     "buenos_map"
    ]
