Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,21 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-1286634a6b90>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-24-cea737e3887f>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-1286634a6b90>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    buenos_map = folium.Map[(la_boca_marker)], (zoom_start = 12)\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-cea737e3887f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    buenos_map = folium.Map[(ba_latitude,ba_longitude], (zoom_start = 12)\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "import folium\n",
-    "buenos_map = folium.Map[(ba_latitude,ba_longi], (zoom_start = 12)\n",
+    "buenos_map = folium.Map[(ba_latitude,ba_longitude], (zoom_start = 12)\n",
     "la_boca_marker.add_to(buenos_map)\n",
     "buenos_map"
    ]
