--- a/index.ipynb
+++ b/index.ipynb
@@ -400,12 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-28-4ca0e0fc63e0>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-4ca0e0fc63e0>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    buenos_map = folium.Map([ba_latitude, ba_longitude]), (zoom_start=12)\u001b[0m\n\u001b[0m                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import folium\n",
-    "buenos_map = folium.Map([ba_latitude, ba_longitude]), (zoom_start = 12)\n",
+    "buenos_map = folium.Map([ba_latitude, ba_longitude]), (zoom_start=12)\n",
     "la_boca_marker.add_to(buenos_map)\n",
     "buenos_map"
    ]
