Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,21 +400,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-45-078e56df24e1>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-46-f286828c1654>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-078e56df24e1>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    buenos_map=folium.Map([ba_latitude, ba_longitude]), zoom_start=(12)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-f286828c1654>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    import folium zoom_start=(12)\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "import folium\n",
-    "buenos_map=folium.Map([ba_latitude, ba_longitude]), zoom_start=(12)\n",
+    "import folium zoom_start=(12)\n",
     "la_boca_marker.add_to(buenos_map)"
    ]
   },
