Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,7 @@
    ],
    "source": [
     "import folium\n",
-    "buenos_map=folium.Map([ba_latitude, ba])\n",
+    "buenos_map=folium.Map([ba_latitude, ba_longitude])\n",
     "zoom_start=(12)\n",
     "la_boca_marker.add_to(buenos_map)"
    ]
