Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,22 +400,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-49-370df002c590>, line 2)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-50-012abf3e5e99>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-370df002c590>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    buenos_map=folium.Map([ba_latitude, ba_longitude])zoom_start=(12)\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-50-012abf3e5e99>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    la_boca_marker.add_to(buenos_map,\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
    "source": [
     "import folium\n",
-    "buenos_map=folium.Map([ba_latitude, ba_longitude])zoom_start=(12)\n",
-    "la_boca_marker.add_to(buenos_map)"
+    "buenos_map=folium.Map([ba_latitude, ba_longitude]), zoom_start=(12)\n",
+    "la_boca_marker.add_to(buenos_map,"
    ]
   },
   {
