--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -238,10 +238,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7ff0c2626e48>"
+       "<folium.map.Marker at 0x7ff0c2593518>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
