Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7ff0c2626e48>"
+       "<folium.map.Marker at 0x7ff0c2593518>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
