--- a/index.ipynb
+++ b/index.ipynb
@@ -431,11 +431,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7ff0c2593a58>"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "neighborhood_markers.pop()"
+    "neighborhood_markers.pop(5)"
    ]
   },
   {
