Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -424,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "neighborhood_markers.pop()"
+    "neighborhood_markers.pop(5)"
    ]
   },
   {
