--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = neighbo"
+    "recoleta_marker = neighborhood_markers[]"
    ]
   },
   {
