--- a/index.ipynb
+++ b/index.ipynb
@@ -446,11 +446,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = neighborhood_markers[]"
+    "recoleta_marker = neighborhood_markers[1]"
    ]
   },
   {
